Otimizações
-FIXED Erro: a gerar um eleitor random, estava a ir buscar randomPhoto 2x
-getRandomPhoto otimizado;
-orderArrayListCC otimizado (mudado para ElectorBO e ja nao precisa de return nem receber parametros);
-Mudado no fileChooser o diretario default de /user para pasta do projeto
-Criado metodo de resizeIcon